# dpc-note-taker

./: Cargo.toml  README.md  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
crates/dpc-note-taker/: Cargo.toml
crates/dpc-note-taker/src/: main.rs
