[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
nix = { version = "0.29", features = ["process"] }
scopeguard = "1"

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"
